[tool.poetry]
name = "opm-simulators"
version = "0.1.0"
description = "opm-simulators Python bindings"
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{ include = "opm" }]
license = "GPL3"
repository = "https://github.com/OPM/opm-simulators"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.5"
sphinx-rtd-theme = {version = "^1.3.0", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
